name:                bee2
version:             0.1.1.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/bee2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bee2.Defs
                     , Bee2.Foreign
                     , Bee2.Crypto.Belt
                     , Bee2.Crypto.Bash
                     , Bee2.Crypto.Brng
                     , Bee2.Crypto.Bign
                     , Bee2.PKCS8
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , base16-bytestring >= 0.1.1
                     , ghc-prim >= 0.4
                     , primitive >= 0.6
                     , asn1-types >= 0.3
                     , asn1-encoding >= 0.9
--                     , inline-c >= 0.5
--  c-sources:           src/Lib.c
  cc-options:          -Wall -O2
  include-dirs: C:/usr/dev/bee2/include
  extra-lib-dirs: C:/usr/dev/bee2/_build_ghc/src
  extra-libraries:     bee2_static
  default-language:    Haskell2010

executable bee2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Args
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bee2
                     , bytestring >= 0.10
                     , base16-bytestring >= 0.1.1
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

test-suite bee2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bee2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bee2
